--- a/samsung.html
+++ b/samsung.html
@@ -1,6 +1,26 @@
 <html>
 <head> <title> Samsung</title></head>
 <body bgcolor="whitesmoke">
+  <!----  start header  -->
+    <table  border="0" width="100%" cellspacing="0" bgcolor="Mistyrose">
+      <tr>
+           <td >
+ 	<table border=0  width="85%" align="center" cellpadding="15">
+	     <tr>
+		<td > </td>
+	                 <td><font face="Times New Roman" size="7" color="SteelBlue"> <b> Matheen </b></font></td>
+		<td width="30">  </td>
+		<td> <font color="cornflowerblue" size="4"> <b> <a href="#">Home</a></font></b></td>
+		<td> <font color="cornflowerblue" size="4"> <b><a href="about">About</a></font></b></td>
+		<td> <font  color="cornflowerblue" size="4"><b><a href="#">other</a></font></b></td>
+		<td> <font color="cornflowerblue" size="4"> <b><a href="#">contact us </a></font></b></td>					 
+	      </tr>
+	</table>
+        </td>
+      </tr>
+	</table>
+
+       <!-- end of head-->
   <h1> SAmsung</h1>
 <img src="sam.jpeg" alt="apple" height="60%"width="50%"/>
 <p>
