--- a/vivo.html
+++ b/vivo.html
@@ -1,5 +1,26 @@
 <html>
 <head><title>Vivo</title></head>
+ <body bgcolor="iglhtgrey">
+   <!----  start header  -->
+    <table  border="0" width="100%" cellspacing="0" bgcolor="Mistyrose">
+      <tr>
+           <td >
+ 	<table border=0  width="85%" align="center" cellpadding="15">
+	     <tr>
+		<td > </td>
+	                 <td><font face="Times New Roman" size="7" color="SteelBlue"> <b> Matheen </b></font></td>
+		<td width="30">  </td>
+		<td> <font color="cornflowerblue" size="4"> <b> <a href="#">Home</a></font></b></td>
+		<td> <font color="cornflowerblue" size="4"> <b><a href="about">About</a></font></b></td>
+		<td> <font  color="cornflowerblue" size="4"><b><a href="#">other</a></font></b></td>
+		<td> <font color="cornflowerblue" size="4"> <b><a href="#">contact us </a></font></b></td>					 
+	      </tr>
+	</table>
+        </td>
+      </tr>
+	</table>
+
+       <!-- end of head-->
 <h1>Vivo</h1>
 <img src="viv.jpeg"width="40%" height="60%"alt="vivo">
 <p>
