--- a/samsung.html
+++ b/samsung.html
@@ -21,7 +21,7 @@
 	</table>
 
        <!-- end of head-->
-  <h1> SAmsung</h1>
+  <h1> Samsung</h1>
 <img src="sam.jpeg" alt="apple" height="60%"width="50%"/>
 <p>
 Samsung Group,[3] or simply Samsung (Korean: 삼성; RR: samseong [samsʌŋ]) (stylized as SΛMSUNG), is a South Korean multinational manufacturing conglomerate headquartered in Samsung Town, Seoul, South Korea.[1] It comprises numerous affiliated businesses,[1] most of them united under the Samsung brand, and is the largest South Korean chaebol (business conglomerate). As of 2020, Samsung has the eighth highest global brand value.[4]
