--- a/vivo.html
+++ b/vivo.html
@@ -1,6 +1,6 @@
 <html>
 <head><title>Vivo</title></head>
- <body bgcolor="iglhtgrey">
+ <body bgcolor="liglhtgrey">
    <!----  start header  -->
     <table  border="0" width="100%" cellspacing="0" bgcolor="Mistyrose">
       <tr>
