--- a/samsung.html
+++ b/samsung.html
@@ -1,6 +1,6 @@
 <html>
 <head> <title> Samsung</title></head>
-<body bgcolor="whitesmoke">
+<body bgcolor="lightgrey">
   <!----  start header  -->
     <table  border="0" width="100%" cellspacing="0" bgcolor="Mistyrose">
       <tr>
