--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	                 <td><font face="Times New Roman" size="7" color="SteelBlue"> <b> Matheen </b></font></td>
 		<td width="30">  </td>
 		<td> <font color="cornflowerblue" size="4"> <b> <a href="#">Home</a></font></b></td>
-		<td> <font color="cornflowerblue" size="4"> <b><a href="about">About</a></font></b></td>
+		<td> <font color="cornflowerblue" size="4"> <b><a href="#about">About</a></font></b></td>
 		<td> <font  color="cornflowerblue" size="4"><b><a href="#">other</a></font></b></td>
 		<td> <font color="cornflowerblue" size="4"> <b><a href="#">contact us </a></font></b></td>					 
 	      </tr>
