--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
  	<table border=0  width="85%" align="center" cellpadding="15">
 	     <tr>
 		<td > </td>
-	                 <td><font face="Times New Roman" size="7" color="SteelBlue"> <img src="logo.jpg"</font></td>
+	                 <td><font face="Times New Roman" size="7" color="SteelBlue"> <img src="logo.jpg"alt="logo"/></font></td>
 		<td width="30">  </td>
 		<td> <font color="cornflowerblue" size="4"> <b> <a href="#">Home</a></font></b></td>
 		<td> <font color="cornflowerblue" size="4"> <b><a href="#about">About</a></font></b></td>
