--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
            <td >
  	<table border=0  width="85%" align="center" cellpadding="15">
 	     <tr>
-		<td > </td>
-	                 <td><font face="Times New Roman" size="7" color="SteelBlue"> <img src="logo.jpg"alt="logo"width="30%" height="20%"></font></td>
-		<td width="30">  </td>
-		<td> <font color="cornflowerblue" size="4"> <b> <a href="#">Home</a></font></b></td>
-		<td> <font color="cornflowerblue" size="4"> <b><a href="#about">About</a></font></b></td>
-		<td> <font  color="cornflowerblue" size="4"><b><a href="#">other</a></font></b></td>
-		<td> <font color="cornflowerblue" size="4"> <b><a href="#">contact us </a></font></b></td>					 
+		<th> </td>
+	                 <td><font face="Times New Roman" size="7" color="SteelBlue"><b>Matheen</b> </font></td>
+		<th width="30">  </td>
+		<th> <font color="cornflowerblue" size="4"> <a href="#">Home</a></font></th>
+		<th> <font color="cornflowerblue" size="4"> <a href="#about">About</a></font></th>
+		<th> <font  color="cornflowerblue" size="4"><a href="#">other</a></font></th>
+		<th> <font color="cornflowerblue" size="4"> <a href="#">contact us </a></font></th>					 
 	      </tr>
 	</table>
         </td>
