--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 		<th> </td>
 	                 <td><font face="Times New Roman" size="7" color="SteelBlue"><b>Matheen</b> </font></td>
 		<th width="30">  </td>
-		<th> <font color="cornflowerblue" size="4"> <a href="#">Home</a></font></th>
+		<th> <font color="cornflowerblue" size="4"> <a href="#home">Home</a></font></th>
 		<th> <font color="cornflowerblue" size="4"> <a href="#about">About</a></font></th>
 		<th> <font  color="cornflowerblue" size="4"><a href="#">other</a></font></th>
-		<th> <font color="cornflowerblue" size="4"> <a href="#">contact us </a></font></th>					 
+		<th> <font color="cornflowerblue" size="4"> <a href="#contact">contact us </a></font></th>					 
 	      </tr>
 	</table>
         </td>
@@ -25,7 +25,7 @@
 
      <!-- main -->
         
-     <table border=0 cellpadding=40 cellspacing=0>
+     <table id="home" border=0 cellpadding=40 cellspacing=0>
  	<tr>
 		<td width="40%" bgcolor="lightgrey"><font size=40 color=aquamarine><b> Welcome to this page scroll down for more info <b></font></td>
 		<td bgcolor="lightgrey"><img src="brush.gif"alt="GIF"width="90%" height="90%" align="right"></td>
@@ -42,7 +42,13 @@
 	<li><h2><strong><a href="xiomi.html">Xiomi</a></strong></h2></li>
 	<li><h2><strong><a href="oneplus.html">Oneplus</a></strong></h2></li>
 	
-<h1 id="about"> About</h1>
-<p> this is the 1st html prjoject</p>
-</body>
+<centre>
+	<h1 id="about"> About</h1>
+<p> We offer top rated content and we provide a complete web services such as 
+	creating and deploying the web page.
+	You will get High school in the future of our games are based on the
+	</p>
+</centre>
+<h1 id="contact">contact us</h1>
+	</body>
 <html>
