--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
            <td >
  	<table border=0  width="85%" align="center" cellpadding="15">
 	     <tr>
-		<th> </td>
-	                 <td><font face="Times New Roman" size="7" color="SteelBlue"><b>Matheen</b> </font></td>
-		<th width="30">  </td>
+		<th> </th>
+	                 <th><font face="Times New Roman" size="7" color="SteelBlue"><b>Matheen</b> </font></th>
+		<th width="30">  </th>
 		<th> <font color="cornflowerblue" size="4"> <a href="#home">Home</a></font></th>
 		<th> <font color="cornflowerblue" size="4"> <a href="#about">About</a></font></th>
 		<th> <font  color="cornflowerblue" size="4"><a href="#">other</a></font></th>
