--- a/apple.html
+++ b/apple.html
@@ -10,10 +10,10 @@
 		<td > </td>
 	                 <td><font face="Times New Roman" size="7" color="SteelBlue"> <b> Matheen </b></font></td>
 		<td width="30">  </td>
-		<td> <font color="cornflowerblue" size="4"> <b> <a href="#">Home</a></font></b></td>
-		<td> <font color="cornflowerblue" size="4"> <b><a href="about">About</a></font></b></td>
+		<td> <font color="cornflowerblue" size="4"> <b> <a href="index.html">Home</a></font></b></td>
+		<td> <font color="cornflowerblue" size="4"> <b><a href="index.html/about">About</a></font></b></td>
 		<td> <font  color="cornflowerblue" size="4"><b><a href="#">other</a></font></b></td>
-		<td> <font color="cornflowerblue" size="4"> <b><a href="#">contact us </a></font></b></td>					 
+		<td> <font color="cornflowerblue" size="4"> <b><a href="#index.html/contact">contact us </a></font></b></td>					 
 	      </tr>
 	</table>
         </td>
