--- a/xiomi.html
+++ b/xiomi.html
@@ -8,12 +8,12 @@
  	<table border=0  width="85%" align="center" cellpadding="15">
 	     <tr>
 		<td > </td>
-	                 <td><font face="Times New Roman" size="7" color="SteelBlue"> <b> Matheen </b></font></td>
+	                 <td><font face="Times New Roman" size="7" color="SteelBlue"> <a href="index.html"><b> Matheen </b></a></font></td>
 		<td width="30">  </td>
-		<td> <font color="cornflowerblue" size="4"> <b> <a href="#">Home</a></font></b></td>
-		<td> <font color="cornflowerblue" size="4"> <b><a href="about">About</a></font></b></td>
+		<td> <font color="cornflowerblue" size="4"> <b> <a href="index.html">Home</a></font></b></td>
+		<td> <font color="cornflowerblue" size="4"> <b><a href="index.html">About</a></font></b></td>
 		<td> <font  color="cornflowerblue" size="4"><b><a href="#">other</a></font></b></td>
-		<td> <font color="cornflowerblue" size="4"> <b><a href="#">contact us </a></font></b></td>					 
+		<td> <font color="cornflowerblue" size="4"> <b><a href="index.html">contact us </a></font></b></td>					 
 	      </tr>
 	</table>
         </td>
